--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "HDF4"
+authors = [{name = "hdfeos", email = "eoshelp@hdfgroup.org"}]
 dynamic = ["version", "description"]
